--- a/.gitignore
+++ b/.gitignore
@@ -162,5 +162,8 @@ dmypy.json
 
 ### Custom files
 *.h5
+*.ppm
+*.jpg
+*.png
 
 # End of https://www.gitignore.io/api/macos,python,jupyternotebooks,visualstudiocode
