--- a/GSTRB-Full Stack Application/requirements.txt
+++ b/GSTRB-Full Stack Application/requirements.txt
@@ -6,7 +6,6 @@ Werkzeug==0.15.5
 Keras==2.2.5
 flask_restplus==0.13.0
 Pillow==6.2.0
-matplotlib==3.1.1
 scikit-image==0.14.2
 scikit_learn==0.21.3
-tensorflow==2.0.0
+tensorflow
